--- a/index.css
+++ b/index.css
@@ -22,9 +22,10 @@
 
 .restaurant-card {
   padding: 5px;
-  max-width: 200px;
-  min-height: 100px;
+  width: 200px;
+  /* min-height: 100px; */
   margin: 5px;
+  overflow: hidden;
 }
 
 .filter-btn {
@@ -55,4 +56,31 @@ ul {
 
 li:hover {
   font-weight: bold;
+}
+
+.shimmer-container {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.shimmer-card {
+  width: 200px;
+  height: 400px;
+  margin: 20px;
+  background-color: #f0f0f0;
+}
+
+.login {
+  padding: 0 20px;
+  cursor: pointer;
+}
+
+.filter {
+  display: flex;
+  align-items: center;
+}
+
+.user-card {
+  padding: 10px;
+  border: 1px solid black;
 }
